--- a/[qb]/qb-atms/nui/index.html
+++ b/[qb]/qb-atms/nui/index.html
@@ -29,12 +29,12 @@
                     </div>
                     <div class="col-8">
                         <div class="card-body p-0">
-                            <h5 class="card-title pb-0 pt-1 pl-2 mb-0" id="cardOwner">Card title</h5>
+                            <h5 class="card-title pb-0 pt-1 pl-2 mb-0" id="cardOwner">Carte Numéro :</h5>
                             <p class="card-text pl-2"><small class="text-muted"><span id="cardType">Visa</span><br><span id="cardNumber">************4354</span></small></p>
                         </div>
                     </div>
                     <div class="col-2 my-auto pr-1">
-                        <button class="btn btn-primary btn-sm btn-block">Use</button>
+                        <button class="btn btn-primary btn-sm btn-block">Utiliser</button>
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@
     </div>
     <div class="row" style="position: relative; top: 54px;">
         <div class="col-12 text-center">
-            <button class="btn btn-danger" id="cancelTransaction" style=" color: white">Cancel Transaction</button>
+            <button class="btn btn-danger" id="cancelTransaction" style=" color: white">Annuler la transaction</button>
         </div>
     </div>
 </div>
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 text-center p-2" style="font-size: 16px; color: white;">Please enter your debit card pin, to access the ATM.</div>
+        <div class="col-12 text-center p-2" style="font-size: 16px; color: white;">Veuillez saisir le code PIN de votre carte de débit pour accéder au guichet automatique.</div>
     </div>
     <div class="row m-1">
         <div class="col-12 pt-2 pb-4"><input type="password" class="form-control text-center" id="pinCode" style="height:60px; line-height:60px; font-size:30px;" readonly="readonly"></div>
@@ -75,15 +75,15 @@
         <div class="col-4 text-center"><button class="btn btn-block btn-info" data-act="enterNumber" data-number="9">9</button></div>
     </div>
     <div class="row m-1" style="position: relative; top: 5px;">
-        <div class="col-4 text-center"><button class="btn btn-block btn-danger" data-act="enterNumber" data-number="CANCEL">CANCEL</button></div>
+        <div class="col-4 text-center"><button class="btn btn-block btn-danger" data-act="enterNumber" data-number="CANCEL">ANNULER</button></div>
         <div class="col-4 text-center"><button class="btn btn-block btn-info" data-act="enterNumber" data-number="0">0</button></div>
-        <div class="col-4 text-center"><button class="btn btn-block btn-success" data-act="enterNumber" data-number="ACCEPT" id="acceptButton">ACCEPT</button></div>
+        <div class="col-4 text-center"><button class="btn btn-block btn-success" data-act="enterNumber" data-number="ACCEPT" id="acceptButton">ACCEPTER</button></div>
     </div>
     <div class="row m-1" style="position: relative; top: 5px;">
         <div class="col-12 text-center"><button class="btn btn-block btn-warning" data-act="enterNumber" data-number="CLEAR">CLEAR</button></div>
     </div>
     <div class="row" style="position: relative; top: 10px;">
-        <div class="col-12 text-center p-2" style="font-size: 12px; color: white; margin-bottom: 50px;">By entering your pin and pressing the accept button you are authorising a debit of $<span id="amount2">3535</span> from your bank account directly to the merchant.</div>
+        <div class="col-12 text-center p-2" style="font-size: 12px; color: white; margin-bottom: 50px;">By entering your pin and pressing the accept button you are authorising a debit of $<span id="amount2">0</span> from your bank account directly to the merchant.</div>
     </div>
 </div>
 
@@ -107,11 +107,11 @@
                             <div class="row mt-2">
                                 <div class="col-12">
                                     <div class="card mb-3" style="background:rgba(51, 51, 51, 0.8); color: #ffffff">
-                                        <div class="card-header">Account Information</div>
+                                        <div class="card-header">Informations sur le compte</div>
                                             <div class="card-body">
                                                 <p class="card-text"><small>
-                                                Account Name: <span id="accountNameATM"></span><br>
-                                                Account Number: <span id="accountNumberATM"></span><br>
+                                                Nom du compte : <span id="accountNameATM"></span><br>
+                                                Numéro de compte : <span id="accountNumberATM"></span><br>
                                                 </small></p>
                                             </div>
                                         </div>  
@@ -119,7 +119,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                        <button class="btn btn-block btn-danger mt-2" id="logoffbuttonatm">Logoff</button>
+                                        <button class="btn btn-block btn-danger mt-2" id="logoffbuttonatm">Déconnexion</button>
                                     </div>
                                 </div>
                             </div>
@@ -130,8 +130,8 @@
                         <div class="tab-pane fade active show" id="bankingHomeATM" role="tabpanel" aria-labelledby="enteringPinTab">
                                 <div class="container-fluid p-2" style="position: relative; top: 54px;">
                                         <div class="row">
-                                            <div class="col-12 title"><h3 style="font-size: 24px; color: white;">Welcome <span id="customerNameATM"></span></h3></div>
-                                            <div class="col-12 content"><p style="font-size: 12px; color: white;">Welcome to your personal banking screen, from this screen you can make deposits, withdrawals and transfer money to other people, You can also check your recent activity using your statement.</p></div>
+                                            <div class="col-12 title"><h3 style="font-size: 24px; color: white;">Bienvenu <span id="customerNameATM"></span></h3></div>
+                                            <div class="col-12 content"><p style="font-size: 12px; color: white;">Bienvenue sur l'écran de vos opérations bancaires personnelles. À partir de cet écran, vous pouvez effectuer des dépôts, des retraits et des transferts d'argent à d'autres personnes, ainsi que vérifier vos activités récentes à l'aide de votre relevé de compte.</p></div>
                                         </div>
                                     <div class="row" id="successRowATM" style="display:none;">
                                         <div class="col-12">
@@ -141,19 +141,19 @@
                                 <div class="row" style="position: relative; top: 15px;">
                                     <div class="col-6">
                                         <div class="card mb-3" style="background:rgba(51, 51, 51, 0.8); color: #fff">
-                                            <div class="card-header"><i class="fad fa-fw fa-money-bill-wave"></i> Current Account Balance</div>
+                                            <div class="card-header"><i class="fad fa-fw fa-money-bill-wave"></i> Balance des comptes courants</div>
                                             <div class="card-body">
                                               <h5 class="card-title" id="currentBalanceATM" style=" color: #28a745"></h5>
-                                              <p class="card-text">This is currently how much is avaliable to spend in your account.</p>
+                                              <p class="card-text">Il s'agit actuellement du montant disponible à dépenser sur votre compte.</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-6">
                                         <div class="card mb-3" style="background:rgba(51, 51, 51, 0.8); color: #fff">
-                                            <div class="card-header"><i class="fad fa-fw fa-coin"></i> Current Cash Balance</div>
+                                            <div class="card-header"><i class="fad fa-fw fa-coin"></i> Solde de trésorerie actuel</div>
                                             <div class="card-body">
                                               <h5 class="card-title" id="currentCashBalanceATM" style=" color: #28a745"></h5>
-                                              <p class="card-text">This is currently how much cash you have on your person.</p>
+                                              <p class="card-text">Il s'agit actuellement du montant de l'argent liquide que vous avez sur vous.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -162,20 +162,20 @@
                                 <div class="row" style="position: relative; top: 15px;">
                                     <div class="col-12">
                                         <div class="card mb-3" style="background:rgba(51, 51, 51, 0.8); color: white">
-                                            <div class="card-header"><i class="fad fa-fw fa-pencil-alt"></i> Quick Actions</div>
+                                            <div class="card-header"><i class="fad fa-fw fa-pencil-alt"></i> Actions Rapides</div>
                                             <div class="card-body">
                                                 <div class="container-fluid">
                                                     <div class="row m-1">
                                                         <div class="col-6">
-                                                            <button class="btn btn-secondary2 btn-block" data-withdrawal="preset" data-amount="100">Withdrawal $100</button>
+                                                            <button class="btn btn-secondary2 btn-block" data-withdrawal="preset" data-amount="100">Retirer 100$</button>
                                                         </div>
                                                         <div class="col-6">
-                                                            <button class="btn btn-secondary2 btn-block" data-withdrawal="preset" data-amount="1000">Withdrawal $1000</button>
+                                                            <button class="btn btn-secondary2 btn-block" data-withdrawal="preset" data-amount="1000">Retirer 1000$</button>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="card-footer"><p class="card-text"><small>These are some quick actions that will enable a quicker and smoother process.</small></p></div>
+                                            <div class="card-footer"><p class="card-text"><small>Il s'agit de quelques actions rapides qui permettront d'accélérer et de faciliter le processus.</small></p></div>
                                           </div>
                                     </div>
                                 </div>
@@ -185,29 +185,29 @@
                         <div class="tab-pane fade" id="bankingWithdrawATM" role="tabpanel" aria-labelledby="bankingWithdrawATM-tab">
                             <div class="container-fluid p-2" style="position: relative; top: 54px;">
                                     <div class="row">
-                                        <div class="col-12 title"><h3 style="font-size: 24px; color: white;">Withdrawals</h3></div>
+                                        <div class="col-12 title"><h3 style="font-size: 24px; color: white;">Retraits</h3></div>
                                     </div>
                                     <div class="row">
                                         <div class="col-12" style="font-size: 12px; color: white;">
-                                            Withdrawal of specific amounts can be completed on this screen, a Withdrawal is where money being taken out of your current account, if you are wanting to withdraw money from your savings, you must first transfer the funds to your current account.
+                                            Le retrait de montants spécifiques peut être effectué sur cet écran. Un retrait consiste à retirer de l'argent de votre compte courant ; si vous souhaitez retirer de l'argent de votre épargne, vous devez d'abord transférer les fonds sur votre compte courant.
                                         </div>
                                     </div>
                                     <div class="row" style="position: relative; top: 15px;">
                                         <div class="col-6">
                                             <div class="card mb-3" style="background:rgba(51, 51, 51, 0.8); color: #fff">
-                                                <div class="card-header"><i class="fad fa-fw fa-money-bill-wave"></i> Current Account Balance</div>
+                                                <div class="card-header"><i class="fad fa-fw fa-money-bill-wave"></i> Balance des comptes courants</div>
                                                 <div class="card-body">
                                                   <h5 class="card-title" id="currentBalanceATM1" style=" color: #28a745"></h5>
-                                                  <p class="card-text">This is currently how much is avaliable to spend in your account.</p>
+                                                  <p class="card-text">Il s'agit actuellement du montant disponible à dépenser sur votre compte.</p>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-6">
                                             <div class="card mb-3" style="background:rgba(51, 51, 51, 0.8); color: #fff">
-                                                <div class="card-header"><i class="fad fa-fw fa-coin"></i> Current Cash Balance</div>
+                                                <div class="card-header"><i class="fad fa-fw fa-coin"></i> Solde de trésorerie actuel</div>
                                                 <div class="card-body">
                                                   <h5 class="card-title" id="currentCashBalance1ATM" style=" color: #28a745"></h5>
-                                                  <p class="card-text">This is currently how much cash you have on your person.</p>
+                                                  <p class="card-text">Il s'agit actuellement du montant de l'argent liquide que vous avez sur vous.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -219,14 +219,14 @@
                                                             <div class="container-fluid">
                                                                 <div class="row">
                                                                     <div class="alert alert-danger d-none" id="withdrawATMErrorMsg">
-                                                                        An unexpected error has occured, please try again later.
+                                                                        Une erreur inattendue s'est produite, veuillez réessayer plus tard.
                                                                     </div>
                                                                 </div>
                                                                 <div class="row">
-                                                                    <div class="col-12 content">Please specify the amount you wish to Withdraw below.</div>
+                                                                    <div class="col-12 content">Veuillez indiquer ci-dessous le montant que vous souhaitez retirer.</div>
                                                                 </div>
                                                                 <div class="row mt-2">
-                                                                    <div class="col-3 my-auto"><label for="withdrawAmountATM"><small>Amount to Withdraw</small></label></div>
+                                                                    <div class="col-3 my-auto"><label for="withdrawAmountATM"><small>Montant à retirer</small></label></div>
                                                                     <div class="col-9"><input type="number" placeholder="$" class="form-control" id="withdrawAmountATM" name="withdrawAmountATM"></div>
                                                                 </div>
                                                             </div>
@@ -237,7 +237,7 @@
                                     </div>
                                     <div class="row" style="position: relative; top: 15px;">
                                         <div class="col-12 text-center">
-                                            <button class="btn btn-secondary2" data-withdrawal="manual">Complete Withdrawal</button>
+                                            <button class="btn btn-secondary2" data-withdrawal="manual">Retrait complet</button>
                                         </div>
                                     </div>
                                 </div>
@@ -246,7 +246,7 @@
                         <div class="tab-pane fade" id="bankingStatementATM" role="tabpanel" aria-labelledby="bankingStatementATM-tab">
                                 <div class="container-fluid p-2">
                                     <div class="row">
-                                        <div class="col-12 title"><h3>Current Account Statement</h3></div>
+                                        <div class="col-12 title"><h3>Relevé de compte courant</h3></div>
                                     </div>
                                     <div class="row">
                                         <div class="col-12">
@@ -257,9 +257,9 @@
                                                         <tr>
                                                             <th>Date</th>
                                                             <th>Description</th>
-                                                            <th class="text-center">Withdrawn</th>
-                                                            <th class="text-center">Deposit</th>
-                                                            <th class="text-center">New Balance</th>
+                                                            <th class="text-center">Retrait</th>
+                                                            <th class="text-center">Dépot</th>
+                                                            <th class="text-center">Nouveau solde</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody id="currentStatementContentsATM">
